# PSS_plausible_secret_sharing

./: .gitignore  Cargo.toml  Dockerfile  PROOF_MANIFEST.md  PSS_FORMAL_VERIFICATION.md  PSS_FORMULAS.md  PSS_HEADS_UP.md  PSS_SECURITY_LAYERS.md  PSS_manual.md  PSS_mathematics.md  PSS_troubleshooting.md  PSS_usecase.md  PSS_vision.md  README.md  RELICENSING.md  flake.nix  shell.nix
completions/: pss.bash  pss.fish  pss.ps1  pss.zsh
firecracker/: build-rootfs.sh  pss-vm.json
man/: pss.1
mathematics/: PSS.lean  lake-manifest.json  lakefile.lean
mathematics/PSS/Field/: GF256.lean
mathematics/PSS/ITS/: ZeroInformation.lean
mathematics/PSS/Lagrange/: AtZero.lean
mathematics/PSS/Path/: ComboPath.lean
mathematics/PSS/Segment/: TieredMax.lean
mathematics/PSS/Shamir/: Threshold.lean
src/: lib.rs  pss_capacity.rs  pss_catalog.rs  pss_error.rs  pss_extract.rs  pss_field_gf256.rs  pss_lagrange.rs  pss_path.rs  pss_payload.rs  pss_poly.rs  pss_segment.rs  pss_setup.rs  pss_shamir.rs  pss_synthetic.rs  pss_tier.rs  pss_transpose.rs  pss_verify.rs
tests/: capacity_cli.rs  cli_integration.rs  combo_its_gate.rs  combo_roundtrip.rs  corpus_helper.rs  decode_cli.rs  extract_determinism.rs  gf256_field.rs  keyless_disk.rs  lagrange_roundtrip.rs  path_its_property.rs  segment_capacity.rs  shamir_its_property.rs  tier_roundtrip.rs  transpose_determinism.rs
