[package]
name = "pss"
version = "0.1.0"
edition = "2021"
description = "Plausible Secret Sharing — Shamir ITS over GF(256) with read-only transposed carriers"
license = "GPL-3.0-only"

[[bin]]
name = "pss"
path = "src/bin/pss.rs"

[dependencies]
subtle = { version = "2.5.0", default-features = false }
zeroize = { version = "1.7.0", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10.8", default-features = false, features = ["oid"] }

[dev-dependencies]
rand = "0.8.5"

[features]
default = []
std = []
